--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Helpers\WindowsAPIs\ShareCharmsHelper.cs" />
     <Compile Include="Messages\Flyouts\NotificationCloseRequestmessage.cs" />
     <Compile Include="PopupService\Misc\FlyoutClosedResult.cs" />
+    <Compile Include="PopupService\Misc\FlyoutDisplayInfo.cs" />
     <Compile Include="PopupService\Misc\FlyoutDisplayMode.cs" />
     <Compile Include="PopupService\Interfaces\IEventConfirmedContent.cs" />
     <Compile Include="PopupService\Interfaces\IValidableDialog.cs" />
