--- a/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
+++ b/Brainf_ck-sharp.UWP/Brainf_ck-sharp.UWP.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Helpers\Extensions\_IEnumerableExtensions.cs" />
     <Compile Include="Helpers\StorageHelper.cs" />
     <Compile Include="Helpers\WindowsAPIs\ShareCharmsHelper.cs" />
+    <Compile Include="Messages\Actions\SaveButtonsEnabledStatusChangedMessage.cs" />
     <Compile Include="Messages\Flyouts\NotificationCloseRequestmessage.cs" />
     <Compile Include="PopupService\Misc\FlyoutClosedResult.cs" />
     <Compile Include="PopupService\Misc\FlyoutDisplayInfo.cs" />
@@ -498,7 +499,7 @@
       <Version>1.0.0.3</Version>
     </PackageReference>
     <PackageReference Include="UICompositionAnimations">
-      <Version>2.1.1</Version>
+      <Version>2.1.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
